Update authors and project URLs in pyproject.toml files across multiple components to reflect the correct author name and provide consistent links to the project's homepage, repository, issues, and documentation. This change enhances clarity and accessibility for users.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.8"
 license = {text = "Apache-2.0"}
 authors = [
-    {name = "Your Name", email = "your.email@example.com"},
+    {name = "Andreas Trawoeger"},
 ]
 keywords = ["mcp", "model-context-protocol", "proxy", "streamable-http", "stdio"]
 classifiers = [
@@ -46,10 +46,10 @@ dev = [
 mcp-streamablehttp-proxy = "mcp_streamablehttp_proxy.cli:main"
 
 [project.urls]
-Homepage = "https://github.com/yourusername/mcp-streamablehttp-proxy"
-Repository = "https://github.com/yourusername/mcp-streamablehttp-proxy.git"
-Issues = "https://github.com/yourusername/mcp-streamablehttp-proxy/issues"
-Documentation = "https://github.com/yourusername/mcp-streamablehttp-proxy#readme"
+Homepage = "https://github.com/atrawog/mcp-oauth-gateway/tree/main/mcp-streamablehttp-proxy"
+Repository = "https://github.com/atrawog/mcp-oauth-gateway/tree/main/mcp-streamablehttp-proxy"
+Issues = "https://github.com/atrawog/mcp-oauth-gateway/issues"
+Documentation = "https://atrawog.github.io/mcp-oauth-gateway"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/mcp_streamablehttp_proxy"]
